--- a/app/templates/auth/signup.html
+++ b/app/templates/auth/signup.html
@@ -19,6 +19,9 @@
         <label for="email">Email</label>
         <input type="email" name="email" id="email" value="{{ email }}" required>
 
+        <label for="phone">Phone Number</label>
+        <input type="text" name="phone" id="phone" value="{{ phone }}" required>
+
         <label for="password">Password</label>
         <input type="password" name="password" id="password" required>
 
@@ -43,4 +46,3 @@
 </div>
 
 {% endblock %}
-
